--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
         <br /><br />
 
         <div id="decision">
-            <label>Your choice:</label>
+            <label id="choiceLabel">Your choice:</label>
             <select id="youOption">
                 <option value="1">Rock 🪨</option>
                 <option value="2">Paper 📰</option>
